Modal de Cadastro de Imagem

--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -114,7 +114,7 @@
               <div class="container-fluid">            
                 <div class="row">
                   <div class="col-sm-3">
-                    <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Imagens</b></button>
+                    <button type="button" class="btn-outline-dark" id="btn-recursos" data-toggle="modal" data-dismiss="modal" data-target="#recursoImagem"><b>Imagens</b></button>
                   </div>
                   <div class="col-sm-3">
                     <button type="button" class="btn-outline-dark" id="btn-recursos"><b>Textos</b></button>
@@ -149,4 +149,43 @@
                 </div> 
             </div>
           </div>
+        </div>
+
+        <div class="modal fade" id="recursoImagem" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+          <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+              <button type="button" class="close" data-toggle="modal" data-dismiss="modal" data-target="#modalResources" style="margin-left: 85%;margin-top: 1%" aria-label="Close">
+                <span aria-hidden="true" style="font-size: 10px"> <u>< VOLTAR</u></span>
+            </button>
+                <h4 class="modal-title" id="imagemlabel1" style="margin-left: 5%">CADASTRO DE IMAGEM</h4>
+                <h5 class="modal-title" id="imagemlabel2" style="margin-left: 5%">Escolha as imagens que melhor caracterizam o projeto</h5> <br/>
+               
+                <form #f="ngForm" (ngSubmit)="onSubmit()">
+                    <label style="margin-left: 5%"> Título da Imagem </label>
+                    <input type="text" class="form-control" id="tituloImagem" name="tituloImagem" ngModel required> <br/>
+
+                    <label for="" style="margin-left: 5%"> Legenda </label>
+                    <input type="text" class="form-control" id="legendaImagem" name="legendaImagem" ngModel>
+                </form>
+                    <input-file
+                    placeholder="" style="margin-left:7%">
+                    </input-file>
+               
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" id="btnSalvarImagem" data-dismiss="modal" data-toggle="modal" data-target="#modalFinalizar" [disabled]="f.invalid">SALVAR</button>
+                  <button type="button" class="btn btn-danger" id="btnMaisRecursos" data-dismiss="modal" data-toggle="modal" data-target="#modalResources" >+ RECURSOS</button>
+              </div>
+                  </div>
+              </div>
+        </div>
+            
+        
+        <div class="modal fade" id="modalFinalizar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+              <div class="modal-content">
+                <h4 style="margin-top: 20%; margin-left:5%">Você ainda pode adicionar outras imagens ao seu projeto. Clique no botão "CONTINUAR" para acrescentar mais imagens, ou clique em "FINALIZAR" para concluir a edição e retornar à sua página personalizada.</h4>
+                <button type="submit" class="btn btn-danger" id="btnFinalizar" data-dismiss="modal">FINALIZAR</button>
+                <button type="button" class="btn btn-danger" id="btnContinuar" data-dismiss="modal" data-toggle="modal" data-target="#recursoImagem">CONTINUAR</button>
+                </div>
+            </div>
         </div>
