--- a/src/app/projeto/projeto1.component.css
+++ b/src/app/projeto/projeto1.component.css
@@ -12,7 +12,7 @@
   }
 
   #tituloImagem{
-    width: 700px;
+    width: 90%;
     margin-left: 5%;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
@@ -20,7 +20,7 @@
   }
 
   #legendaImagem{
-    width: 700px;
+    width: 90%;
     margin-left: 5%;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
