--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -42,6 +42,7 @@
               <input
                 type="text"
                 id="username"
+                value=""
                 class="camposform"
                 name="email"
                 [(ngModel)]="model.email"
