--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -215,39 +215,18 @@
                         </select>
                     </div>
                     <div class="form-group class-md-1" style="position: relative">
-                        <a href="#0" (click)="addCurso"><img [src]="divide" style="max-width: 20px; position: absolute; top: 50%;"></a>
+                        <a href="#0" (click)="addCurso()"><img [src]="divide" style="max-width: 20px; position: absolute; top: 50%;"></a>
                     </div>
                 </div>
-                <div *ngFor="let coop of coops">
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <label for="">Coop(s)</label>
-                            <input type="text" class="form-control" id="" name="" placeholder="">
-                        </div>
-                        <div class="form-group col-md-4">
-                            <label for="">Unidade(s)</label>
-                            <select name="" id="" class="form-control">
-                                <option value=""></option>
-                            </select>
-                        </div>
-                        <div class="form-group col-md-4">
-                            <label for="">Curso(s)</label>
-                            <select name="" id="" class="form-control">
-                                <option value=""></option>
-                            </select>
-                            <a href="#0" (click)="deleteCurso"><img [src]="divide" style="max-width: 20px"></a>
-                        </div>
-                    </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="postProject()">FINALIZAR</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
-                    data-target="#modalResources" >CONTINUAR</button>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="postProject()">FINALIZAR</button>
+                  <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
+                      data-target="#modalResources" >CONTINUAR</button>
+              </div>
             </div>
         </div>
     </div>
-</div>
 
 <div class="modal fade" id="modalMidias" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
